deploy-istio/zero/user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: zero
  labels:
    app: user
    service: user
spec:
  selector:
    app: user
  ports:
  - name: grpc-port
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
