deploy-istio/zero/user/user-dr.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: user-dr
  namespace: zero
spec:
  host: user  #走 user-svc
  subsets:
  - name: user-v1
    labels:
      version: l1
  - name: user-v2
    labels:
      version: l2
  - name: user-v3
    labels:
      version: l3
